# catkin-build

./: .bash_aliases  .gitignore  .gitmodules  .iarc_aliases  .opencv_install.sh  .pullapprove.yml  .travis.yml  README.md  banish404_0.1-4_all.deb  setupenv.sh
Guidance-SDK-ROS/: CMakeLists.txt  log.txt
Guidance-SDK-ROS/launch/: test.launch
Guidance-SDK-ROS/src/: GuidanceNode.cpp  GuidanceNodeCalibration.cpp  GuidanceNodeTest.cpp  log.txt
Jeen225IARC/: classTest  classTest.cpp  click_calibration  click_calibration.cpp  color.h  green.txt  labcs  labcs.cpp  red.txt
Jeen225IARC/roomba_iarc/: CMakeLists.txt  blob_detect.cpp  click_calibration  click_calibration.cpp  color.h  package.xml
actor/: CMakeLists.txt  package.xml
actor/include/: ai_pilot.h  flight.h  flight_definitions.h
actor/src/: ai_pilot.cpp  robot_controller.cpp
controller/: CMakeLists.txt  package.xml  settings.sh
controller/include/: flight_definitions.h  mavros_handler.h  pid_calibration.txt  pid_handler.h  robot_controller.h
controller/launch/: controller_node.launch  preFlight.launch  run_everything.launch
controller/src/: .disable_rc_overrides.cpp.swp  disable_rc_overrides.cpp  main.cpp  mavros_handler.cpp  pid_handler.cpp  robot_controller.cpp  test_sub.cpp  visualizer.cpp
edge_detect/: CMakeLists.txt  package.xml
edge_detect/include/: color.h  edge_detect.h  green.txt  imageDecoder.h  line.h  red.txt
edge_detect/launch/: edge_detect.launch
edge_detect/src/: click_calibration.cpp  color.cpp  edge_detect.cpp  grid_detect_test.cpp  line.cpp  main.cpp
localizer/: CMakeLists.txt  package.xml
localizer/include/: grid_tracker.h  loc_object.h
localizer/launch/: grid.launch  grid_get_test_data.launch  loc_object.launch  localizer_node.launch
localizer/math/: aabb.h  common.h  quaternion.h
localizer/src/: grid_detect_test.cpp  grid_tracker.cpp  loc_object.cpp  main.cpp
navigator/: CMakeLists.txt  package.xml
navigator/include/: actions.h  ai_nav.h  arena.h  collision_model.h  conditions.h  decision_node.h  ground_robot.h  herdable_ground_robot.h  obstacle_ground_robot.h  states.h  uav.h
navigator/launch/: cam.launch  navigator_node.launch
navigator/src/: .ai_nav.cpp.swp  actions.cpp  actions.py  ai_nav.cpp  arena.cpp  conditions.cpp  decision_architecture.cpp  ground_robot.cpp  herdable_ground_robot.cpp  main.cpp  nav.py  obstacle_ground_robot.cpp  states.py  test_smach.py  test_yolo.py  uav.cpp
observer/: CMakeLists.txt  package.xml
observer/cam_data/: cam0.yml  cam1.yml  cam2.yml  cam_0.ini  cam_2.ini  cam_a.yaml  camera_calib.yml
observer/include/: .optical_flow_object.h  camera_model.h  cartographer.h  color_tracker.h  grid_tracker.h  optical_flow_object.h  plate_angler.h  plate_localizer.h
observer/launch/: cam.launch  cam_model_test.launch  demo.launch  observer_node.launch  plate_localizer.launch  usb2_cam.launch  usb_cam_0.launch  usb_cam_1.launch  usb_cam_2.launch  usb_cam_a.launch  usbcam_launch.launch  video0.launch  video1.launch
observer/scripts/: pokestick.py
observer/src/: .optical_flow_object.cpp  LAB_Object.cpp  LAB_Object.h  cam_model_test.cpp  camera_model.cpp  camera_model.h  cartographer.cpp  color_calibrator.cpp  color_finder.cpp  color_tracker.cpp  color_tracker.h  cycle_image.cpp  grid_tracker.cpp  image_process.cpp  line_tracker.cpp  main.cpp  multi_vid_cap_down_front.cpp  multi_vid_cap_left_right.cpp  optical_flow_object.cpp  plate_angler.cpp  plate_angler.h  plate_localizer.cpp  pokestick_talker.cpp  pole_detect.cpp
opencv_funlab/: CMakeLists.txt  package.xml
opencv_funlab/launch/: demo.launch
opencv_funlab/src/: LAB_Object.cpp  opencv_tracking.cpp  plate_angle.cpp  sub_node.cpp
orientation/: .orieNet.py.swp  OrieNet_tester.py  dataset_generator.py  orieNet.py  partly_trained.h5  snapshot.py  train_iception.py  training.py  units.txt
orientation/weights/: snap-model0-2.h5  snap-model0-3.h5  snap-model0-Best.h5
orienter/: CMakeLists.txt  package.xml
orienter/include/: loc_object.h
orienter/src/: loc_object.cpp  main.cpp
phidgets/: CMakeLists.txt  README  manifest.xml
phidgets/.bzr/branch/: branch.conf  last-revision
phidgets/.bzr/checkout/: dirstate
phidgets/.bzr/repository/: pack-names
plate_detect/: CMakeLists.txt  package.xml
plate_detect/include/: color.h  green.txt  imageDecoder.h  red.txt
plate_detect/launch/: calibrate.launch  plate_detect.launch
plate_detect/script/: roomba_heading.py  subscriber.py
plate_detect/src/: blob_detect.cpp  click_calibration.cpp  color.cpp  test.cpp
rc_sender/: CMakeLists.txt  CMakeLists.txt~  package.xml
rc_sender/src/: .image_listener.cpp.swo  image_listener.cpp  image_listener.cpp~  rc_sender_node.cpp  rc_sender_node.cpp~
ros_opencv/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros_opencv/launch/: BlueLightTracking.launch  GreenColorTracker.launch  TrackIRobot.launch  Vision.launch
ros_opencv/msg/: Alt.msg  Boundary.msg  CameraCVMessage.msg~  ObstacleDetected.msg  TrackingPoint.msg
ros_opencv/src/: Light.cpp  LightTalker.cpp  LightTalker.cpp~  LightToLaser.cpp  LightToLaser.cpp~  ProcessLines.cpp  ProcessLines.cpp~  TestXtion.cpp  TrackBlobs.cpp  TrackIRobot.cpp  TrackIRobot.cpp~  TrackIRobotBlobs.cpp  XtionTrackBlue.cpp  XtionTrackBlue.cpp~  XtionTrackColor.cpp  XtionTrackObject.cpp  object_avoid.cpp  videoOutput.cpp
roscopter/nodes/: roscopter_node.py
sensors/: CMakeLists.txt  hokuyo  package.xml
sensors/cam_data/: cam_1.ini  cam_1.yml
sensors/include/: CompassSensor.h  IMUSensor.h  LidarSensor.h  compressed_image_repeater.h  imageDecoder.h  imageEncoder.h  sensors.h
sensors/launch/: cam.launch  hokuyo.launch  point_lidar.launch  sensors.launch
sensors/src/: CompassSensor.cpp  IMUSensor.cpp  LidarSensor.cpp  Main.cpp  PixhawkIMUSensor.cpp  listener.cpp
spsuart/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  settings.sh
spsuart/include/: PIDController.cpp  PIDController.h  SimpleSerial.cpp
spsuart/launch/: mavros.launch  (+5 more)
test_mavlink_feedback/: CMakeLists.txt  CMakeLists.txt~  package.xml
yolo/: CMakeLists.txt  package.xml
(+105 files in other folders)
